# papercheck_db

./: .env.example  LICENSE  README.md  alembic.ini  example_usage.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 51b22f3dfe1f_initial_database_schema.py
papercheck_app/api/: __init__.py
papercheck_app/core/: config.py
papercheck_app/models/: __init__.py  base.py  dataset.py  paper.py
papercheck_app/schemas/: __init__.py  extract.py  ground_truth.py
papercheck_app/services/: __init__.py
papercheck_db/: __init__.py
papercheck_db/core/: config.py  database.py
papercheck_db/models/: __init__.py  base.py  canon.py  dataset.py  extract.py  extracteval.py  extractor.py  extractoreval.py  ground_truth.py  paper.py
papercheck_db/schemas/: __init__.py  base.py  canon.py  dataset.py  extract.py  extracteval.py  extractor.py  extractoreval.py  ground_truth.py  paper.py
